chore: 테스트 완료 코드 이전 및 deque로 변경
카드 덱의 의도를 나타내기에 deque가 더 낫다고 판단하였습니다